--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <!-- SLIDER GAMBAR -->
       <div class="slider">
         <div class="slides">
-          <img src="https://media.discordapp.net/attachments/1072783378228723754/1428652375023026178/RobloxScreenShot20251017_141829393.png?ex=6901c835&is=690076b5&hm=a287142e2f6f305c7452bef806af242f9dc3843f655c6365d3bf05d5d97dcf54&=&format=webp&quality=lossless&width=825&height=450" alt="Slide 1">
-          <img src="https://media.discordapp.net/attachments/1157212248658411531/1423423396850569336/Roblox_2025_09_28_21_37_08_1.png?ex=6901e017&is=69008e97&hm=9f8ee9dcfc7cdfdb29bd7fea9e044fa427427fca9ca85b3aed8e534cb39696bb&=&format=webp&quality=lossless&width=1104&height=737" alt="Slide 2">
-          <img src="https://media.discordapp.net/attachments/1428190252383604806/1432347549842280528/RobloxScreenShot20251026_191833497.png?ex=690161db&is=6900105b&hm=67e42610e428154ca6c166f88899379ad8918086937da9eeed7c76c4440af708&=&format=webp&quality=lossless&width=1254&height=683" alt="Slide 3">
+          <img src="img/jr2052.webp" alt="Slide 1">
+          <img src="img/ie305.webp" alt="Slide 2">
+          <img src="img/tm6000.webp" alt="Slide 3">
         </div>
 
         <!-- Tombol Navigasi -->
@@ -45,7 +45,7 @@
     <!-- RUTE -->
     <div id="rute" class="section rute">
       <h2>Map DOPT 5 JRR</h2>
-      <img src="https://media.discordapp.net/attachments/1157214259512610826/1430514927524642926/Tak_berjudul67.jpg?ex=69014e98&is=68fffd18&hm=b6fe3980fce979a1acd8b447b436bf4d2d40ce973d1b870a296368825e62f1a9&=&format=webp&width=1848&height=483" alt="Map DOPT 5 JRR">
+      <img src="img/rutedopt5.webp" alt="Map DOPT 5 JRR">
       <p>Rute utama pada peta Java Railways Roblox.</p>
       
     </div>
@@ -104,37 +104,37 @@
       </div>
 
       <div class="sarana-box">
-        <img src="img/jr" alt="JR 205 Marchen Face">
+        <img src="img/jr205marchen.webp" alt="JR 205 Marchen Face">
         <div class="sarana-text">JR 205 Marchen Face</div>
       </div>
 
       <div class="sarana-box">
-        <img src="https://media.discordapp.net/attachments/1428190252383604806/1432347549842280528/RobloxScreenShot20251026_191833497.png?ex=690161db&is=6900105b&hm=67e42610e428154ca6c166f88899379ad8918086937da9eeed7c76c4440af708&=&format=webp&quality=lossless&width=1254&height=683" alt="Tokyo Metro 6000">
+        <img src="img/tm6000.webp" alt="Tokyo Metro 6000">
         <div class="sarana-text">Tokyo Metro 6000</div>
       </div>
 
       <div class="sarana-box">
-        <img src="https://media.discordapp.net/attachments/1072783378228723754/1432335913589149726/RobloxScreenShot20251027_183643345.png?ex=69015705&is=69000585&hm=8f922c9db0f2058d86584cb79383477750d8dca3e67ca015f572b0c24e2de0af&=&format=webp&quality=lossless&width=1254&height=683" alt="Tokyo Metro 7000">
+        <img src="img/tm7000.webp" alt="Tokyo Metro 7000">
         <div class="sarana-text">Tokyo Metro 7000</div>
       </div>
 
       <div class="sarana-box">
-        <img src="https://media.discordapp.net/attachments/1072783378228723754/1429360182554660864/RobloxScreenShot20251019_134631257.png?ex=69010fa7&is=68ffbe27&hm=c009c62996c4cd9af54adf7174eaaf18ba009999b63a49807982ec98540ad30b&=&format=webp&quality=lossless&width=1256&height=684" alt="KRL Seri TM04">
+        <img src="img/tm05.webp" alt="KRL Seri TM04">
         <div class="sarana-text">Tokyo Metro 05</div>
       </div>
       
       <div class="sarana-box">
-        <img src="https://media.discordapp.net/attachments/1157212248658411531/1424051174692360192/SPOILER_RobloxScreenShot20250928_204721587.png?ex=690185c1&is=69003441&hm=2a8021a726545152198495277403123de005872473216d039cc8b0e2bfc7faf7&=&format=webp&quality=lossless&width=1217&height=684" alt="iE305">
+        <img src="img/ie305.webp" alt="iE305">
         <div class="sarana-text">iE305</div>
       </div>
 
       <div class="sarana-box">
-        <img src="https://media.discordapp.net/attachments/1157220896382144513/1415280304599334922/Tak_berjudul646_20250910170901.png?ex=6901e9ff&is=6900987f&hm=c13d6f62d191b0323fe69a01999cc39025f2f104eb31d0cf068325e05ee4c2ee&=&format=webp&quality=lossless&width=1113&height=684" alt="Tokyu 8500">
+        <img src="img/tokyu8500.webp" alt="Tokyu 8500">
         <div class="sarana-text">Tokyu 8500</div>
       </div>
 
       <div class="sarana-box">
-        <img src="https://media.discordapp.net/attachments/1072783378228723754/1409036050654822561/RobloxScreenShot20250824_112343702.png?ex=69019c15&is=69004a95&hm=ef4577ba412dcaece93fe5584ffee4ee5bc230067457be85b6ab9f0687ec4dfe&=&format=webp&quality=lossless&width=1254&height=683" alt="Tokyu 8500 Jalita">
+        <img src="img/tokyu8500jalita.webp" alt="Tokyu 8500 Jalita">
         <div class="sarana-text">Tokyu 8500 Jalita</div>
       </div>
     </div>
